unpackaged/main/default/objects/MR_Lines__c/MR_Lines__c.object-meta.xml
<CustomObject>
    <label>MR Line</label>
    <nameField>
        <displayFormat>MRL-{000000000}</displayFormat>
        <label>MR Lines Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MR Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>