unpackaged/main/default/objects/MR_Lines__c/fields/CPQ_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CPQ Product Name</label>
    <referenceTo>CPQ_Product__c</referenceTo>
    <relationshipLabel>MR Lines</relationshipLabel>
    <relationshipName>MR_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>