unpackaged/main/default/objects/MR_Lines__c/fields/Markup_Percent__c.field-meta.xml
<CustomField>
    <fullName>Markup_Percent__c</fullName>
    <formula>Unit_Price_Margin__c / Buy_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Markup Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>