unpackaged/main/default/objects/MR_Lines__c/fields/MR_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>MR_Account_Name__c</fullName>
    <formula>Material_Requistion__r.Related_Opportunity__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MR Account Name</label>
    <type>Text</type>
</CustomField>