unpackaged/main/default/objects/MR_Lines__c/fields/MR_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>MR_Opportunity_ID__c</fullName>
    <formula>Material_Requistion__r.Related_Opportunity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MR Opportunity ID</label>
    <type>Text</type>
</CustomField>