unpackaged/main/default/objects/MR_Lines__c/fields/Quanity__c.field-meta.xml
<CustomField>
    <fullName>Quanity__c</fullName>
    <label>Quantity</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>