unpackaged/main/default/objects/MR_Lines__c/fields/Sell_Price__c.field-meta.xml
<CustomField>
    <fullName>Sell_Price__c</fullName>
    <formula>CPQ_Product_Name__r.Sell_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sell Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>