unpackaged/main/default/objects/MR_Lines__c/fields/Total_Buy_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Buy_Cost__c</fullName>
    <formula>Quanity__c *  Buy_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Buy Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>