unpackaged/main/default/objects/MR_Lines__c/fields/Total_Sells_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Sells_Price__c</fullName>
    <formula>Quanity__c *   Sell_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Sells Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>