unpackaged/main/default/objects/MR_Lines__c/fields/Unit_Price_Margin__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_Margin__c</fullName>
    <formula>Sell_Price__c - Buy_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>